# Advanced-ML-Project

./: .gitattributes  .gitignore  main.py  pyproject.toml
Deliverable1/: DescriptionAssignment.ipynb  main.ipynb  utils.py
Deliverable1/checkpoints/: best_efficientnet_b0.pth  best_efficientnet_b0_V2.pth  best_gan.pth  best_multimodal_efficientnet.pth  best_multimodal_efficientnet_V2.pth  best_multimodal_simple_cnn.pth  best_multimodal_vit_V2.pth  best_multimodal_vit_V3.pth  best_simple_cnn.pth  best_simple_cnn_balanced.pth
Deliverable1/models/: cdcgan.py  cgan.py  gan.py  multiModalEfficientNet.py  multiModalViT.py  multimodal_cnn.py  simple_cnn.py
Deliverable2/: main.ipynb  utils.py
Deliverable2/models/: best_apple_lstm.pth  best_optimized_lstm.pth  lstm.py  rolling_predictions.csv  temp_optuna.pth
Deliverable2/models/sarimax/: sarimax_val_predictions.csv
