[project]
name = "advanced-ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grad-cam>=1.5.5",
    "huggingface>=0.0.1",
    "huggingface-hub>=1.10.1",
    "ipykernel>=7.2.0",
    "kagglehub[pandas-datasets]>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "optuna-dashboard>=0.20.0",
    "pandas>=3.0.0",
    "pillow>=12.1.1",
    "pip>=26.0.1",
    "polars>=1.38.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.0",
    "shap>=0.51.0",
    "statsmodels>=0.14.6",
    "tensorboard>=2.20.0",
    "tensorflow>=2.21.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "xgboost>=3.2.0",
]
